fix styling issue on mobile

--- a/src/components/searchBar/SearchBar.css
+++ b/src/components/searchBar/SearchBar.css
@@ -32,6 +32,7 @@
   font-size: 24px;
   font-weight: 500;
   width: 95%;
+  z-index: 6;
 }
 
 .searchbar input:focus {
